add note, remove debug info, file name modify in makefile

--- a/watchdog_driver/Makefile
+++ b/watchdog_driver/Makefile
@@ -1,5 +1,5 @@
 	KERNELDIR ?= /lib/modules/$(shell uname -r)/build
 	PWD := $(shell pwd)
-	obj-m := hello.o
+	obj-m := dx_sbsa_watchdog.o
 default:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
